--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,102 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+/* ************************************************************************************************
+ *                                            IMPORTS                                             *
+ ************************************************************************************************ */
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+/* Browser Style Normalizer */
+@import url('/node_modules/browser-style-normalizer/dist/index.css');
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* Typography Font */
+@import url('/node_modules/webfont-montserrat/dist/index.css');
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+
+
+/* ************************************************************************************************
+ *                                            GLOBALS                                             *
+ ************************************************************************************************ */
+ :root {
+
+  /* Font */
+  --font-size: 16px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+
+
+/* ************************************************************************************************
+ *                                      TAILWIND DIRECTIVES                                       *
+ ************************************************************************************************ */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  html {
+    font-family: "Montserrat", sans-serif;
+    font-size: var(--font-size);
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+}
+
+
+
+
+
+/* ************************************************************************************************
+ *                                    RESPONSIVE MEDIA QUERIES                                    *
+ ************************************************************************************************ */
+
+/*
+ * Breakpoint Prefix: sm
+ */
+@media (min-width: 640px) {
+
+}
+
+ 
+ 
+
+
+/*
+ * Breakpoint Prefix: md
+ */
+@media (min-width: 768px) {
+
+}
+
+ 
+ 
+
+
+/*
+ * Breakpoint Prefix: lg
+ */
+@media (min-width: 1024px) {
+
+}
+
+ 
+ 
+
+
+/*
+ * Breakpoint Prefix: xl
+ */
+@media (min-width: 1280px) {
+
+}
+
+
+
+
+
+/*
+ * Breakpoint Prefix: 2xl
+ */
+@media (min-width: 1536px) {
+
 }
