--- a/src/index.css
+++ b/src/index.css
@@ -13,19 +13,6 @@
 
 
 /* ************************************************************************************************
- *                                            GLOBALS                                             *
- ************************************************************************************************ */
- :root {
-
-  /* Font */
-  --font-size: 16px;
-}
-
-
-
-
-
-/* ************************************************************************************************
  *                                      TAILWIND DIRECTIVES                                       *
  ************************************************************************************************ */
 @tailwind base;
@@ -33,6 +20,10 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --font-size: 16px;
+    --radius: 0.5rem;
+  }
   html {
     font-family: "Montserrat", sans-serif;
     font-size: var(--font-size);
