Include skeleton for all sections
Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,24 @@
 
 
 /* ************************************************************************************************
+ *                                            GENERAL                                             *
+ ************************************************************************************************ */
+
+/*
+ * Page Sections
+ */
+main section {
+  margin: 56px 0;
+}
+main section:first-child {
+  margin: 20px 0;
+}
+
+
+
+
+
+/* ************************************************************************************************
  *                                    RESPONSIVE MEDIA QUERIES                                    *
  ************************************************************************************************ */
 
