--- a/src/index.css
+++ b/src/index.css
@@ -47,10 +47,12 @@
 main section {
   margin: 56px 0;
 }
-main section:first-child {
+main section:nth-child(1) {
   margin: 15px 0;
 }
-
+main section:nth-child(2) {
+  margin: 30px 0;
+}
 
 
 
