--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 @import url('/node_modules/browser-style-normalizer/dist/index.css');
 
 /* Typography Font */
-@import url('/node_modules/webfont-montserrat/dist/index.css');
+@import url('/node_modules/webfont-ubuntu/dist/index.css');
 
 
 
@@ -25,7 +25,7 @@
     --radius: 0.5rem;
   }
   html {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-size: var(--font-size);
     font-weight: 400;
     font-style: normal;
